@@ -14,7 +14,8 @@ test1.pgc: test1.pgc.in
 TESTS = test1 test1.c \
         test2 test2.c \
         test3 test3.c \
-        test4 test4.c
+        test4 test4.c \
+        test5 test5.c
 
 all: $(TESTS)
 
