@@ -14,7 +14,6 @@ main(void)
 {
 exec sql begin declare section;
 	char db[200];
-	char id[200];
 	char pw[200];
 exec sql end declare section;
 
@@ -24,18 +23,13 @@ exec sql end declare section;
 	exec sql alter user connectuser ENCRYPTED PASSWORD 'connectpw';
 	exec sql disconnect;  /* <-- "main" not specified */
 
-	strcpy(db, "connectdb");
-	strcpy(id, "main");
-	exec sql connect to :db as :id;
-	exec sql disconnect :id;
-
 	exec sql connect to connectdb@localhost as main;
 	exec sql disconnect main;
 
-	exec sql connect to connectdb@localhost as main;
+	exec sql connect to connectdb@localhost:@TEMP_PORT@ as main;
 	exec sql disconnect main;
 
-	exec sql connect to connectdb@localhost as main user connectuser/connectdb;
+	exec sql connect to connectdb:@TEMP_PORT@ as main;
 	exec sql disconnect main;
 
 	exec sql connect to tcp:postgresql://localhost:@TEMP_PORT@/connectdb user connectuser identified by connectpw;
@@ -50,6 +44,9 @@ exec sql end declare section;
 	exec sql connect to unix:postgresql://localhost:@TEMP_PORT@/connectdb user connectuser using "connectpw";
 	exec sql disconnect;
 
+	exec sql connect to unix:postgresql://localhost:@TEMP_PORT@/connectdb user connectuser;
+	exec sql disconnect;
+
 	/* wrong db */
 	exec sql connect to tcp:postgresql://localhost:@TEMP_PORT@/nonexistant user connectuser identified by connectpw;
 	exec sql disconnect;
@@ -61,11 +58,6 @@ exec sql end declare section;
 	/* wrong password */
 	exec sql connect to unix:postgresql://localhost:@TEMP_PORT@/connectdb user connectuser identified by "wrongpw";
 	/* no disconnect necessary */
-
-	/* connect twice */
-	exec sql connect to connectdb as main;
-	exec sql connect to connectdb as main;
-	exec sql disconnect main;
 
 	return (0);
 }
