@@ -2121,5 +2121,10 @@ Th 24. Aug 11:53:29 CEST 2006
 
 	- Fixed of by one variable size.
 	- Synced parser.
+
+Su 27. Aug 17:54:36 CEST 2006
+
+	- Enabled single-quoted connection targets.
+	- Fixed a memory leak/segfault in unsuccessful connection.
 	- Set ecpg library version to 5.2.
 	- Set ecpg version to 4.2.1.
